칸 반복 오류 수정